from code review, pull out key/secret api strings for LinkedIn and Get Satisfaction into the stack configuration